add demo for Kafka headers feature

--- a/spark-3.0-features/pom.xml
+++ b/spark-3.0-features/pom.xml
@@ -76,6 +76,12 @@
             <version>${spark.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.12</artifactId>
             <version>3.3.0-SNAP2</version>
