--- a/spark-3.0-features/pom.xml
+++ b/spark-3.0-features/pom.xml
@@ -80,6 +80,11 @@
             <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.scalatest</groupId>
