--- a/spark-sql/pom.xml
+++ b/spark-sql/pom.xml
@@ -69,6 +69,11 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_2.12</artifactId>
             <version>${spark.version}</version>
-        </dependency> 
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
     </dependencies>
 </project>
