add Kubernetes extension to get the code for analysis

--- a/spark-3.0-features/pom.xml
+++ b/spark-3.0-features/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>spark-hive_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-kubernetes_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.scalatest</groupId>
