add broker, improved transactional producer and non transactional producer demo

--- a/structured-streaming-transactional-kafka/pom.xml
+++ b/structured-streaming-transactional-kafka/pom.xml
@@ -75,5 +75,10 @@
             <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>3.0.8</version>
+        </dependency>
     </dependencies>
 </project>
