ignore metadata store

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ spark-warehouse/
 work/
 src/test/resources/generated_file_1_gb.txt
 src/test/resources/generated_file_500_mb.txt
-
+metastore_db
 
 # End of https://www.gitignore.io/api/sbt,scala,intellij
 
