add demo code for Structured Streaming blog post

--- a/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
+++ b/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
@@ -85,6 +85,11 @@
             <version>${spark.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aws</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.scalatest</groupId>
             <artifactId>scalatest_2.12</artifactId>
             <version>3.3.0-SNAP2</version>
