--- a/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
+++ b/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
@@ -76,6 +76,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
+            <artifactId>spark-avro_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
