add new dependencies

--- a/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
+++ b/spark-3.1.1-vs-3.0.1/spark-3.1.1/pom.xml
@@ -90,9 +90,19 @@
             <version>${spark.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-kubernetes_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-aws</artifactId>
             <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.20</version>
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
