--- a/structured-streaming-schema-registry/pom.xml
+++ b/structured-streaming-schema-registry/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.waitingforcode</groupId>
-    <artifactId>spark_delta_udm_patterns</artifactId>
+    <artifactId>structured_streaming_schema_registry</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spark.version>3.1.1</spark.version>
+        <spark.version>2.4.6</spark.version>
         <java.version>1.8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -72,18 +72,13 @@
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.12</artifactId>
+            <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-hive_2.12</artifactId>
-            <version>${spark.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.delta</groupId>
-            <artifactId>delta-core_2.12</artifactId>
-            <version>1.0.0</version>
-        </dependency>
+	  <groupId>za.co.absa</groupId>
+	  <artifactId>abris_2.12</artifactId>
+	  <version>4.2.0</version>
+	</dependency>
     </dependencies>
 </project>
