two other new features of Structured Streaming 3.4.0

--- a/spark-3.4.0-features/structured_streaming/pom.xml
+++ b/spark-3.4.0-features/structured_streaming/pom.xml
@@ -70,10 +70,14 @@
             <artifactId>spark-sql_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
-        <!-- not used in the code but useful for the internals analysis (e.g. the available now trigger) -->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-protobuf_2.12</artifactId>
             <version>${spark.version}</version>
         </dependency>
     </dependencies>
